// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package authService;
option go_package = ".;authService";

message Profile {
  string name = 1;
  string mobile = 2;
  string dob = 3;
  string location = 4;
  google.protobuf.Timestamp createdAt = 5;
}

message SignUpRequest {
  string name = 1;
  string mobile = 2;
  string dob = 3;
  string location = 4;
}

message SignUpResponse {
  string status = 1;
}

message VerifyOtpRequest {
  int32 otp = 1;
  string mobile = 2;
}

message VerifyOtpResponse {
  string status = 2;
}

message LoginRequest {
  string mobile = 1;
}

message LoginResponse {
  string status = 1;
}

message GetProfileRequest {
  string mobile = 1;
}

message GetProfileResponse {
  Profile profile = 1;
}

service AuthService {
  rpc Signup(SignUpRequest) returns (SignUpResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}






